unpackaged/main/default/objects/pse__Billing_Event__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ENH19645: User processing the Billing Event</description>
    <inlineHelpText>User processing the Billing Event.</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Billing_Events</relationshipName>
    <type>Lookup</type>
</CustomField>