unpackaged/main/default/objects/pse__Billing_Event__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <description>ENH19645</description>
    <formula>HYPERLINK("/apex/billingEventAssignment?id=" &amp; Id ,"Assign To Me" , "_self" )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment</label>
    <type>Text</type>
</CustomField>