unpackaged/main/default/objects/pse__Billing_Event__c/fields/Billed_date__c.field-meta.xml
<CustomField>
    <fullName>Billed_date__c</fullName>
    <description>This field captures the Billed date when the BE is set to Released by the flow.</description>
    <label>Billed date</label>
    <type>Date</type>
</CustomField>