unpackaged/main/default/objects/pse__Billing_Event__c/fields/Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status__c</fullName>
    <formula>TEXT(pse__Project__r.Billing_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Status</label>
    <type>Text</type>
</CustomField>