unpackaged/main/default/objects/pse__Billing_Event__c/fields/Created_By_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Assigned_To__c</fullName>
    <description>IT3056335. Victoria Cavaluzzi</description>
    <formula>CreatedById &lt;&gt;  Assigned_To__r.Id</formula>
    <label>Created By &lt;&gt; Assigned To</label>
    <type>Checkbox</type>
</CustomField>