unpackaged/main/default/objects/pse__Billing_Event__c/fields/Edit_Lock__c.field-meta.xml
<CustomField>
    <fullName>Edit_Lock__c</fullName>
    <description>ENH20813 - To be used in validation rule to lock down specific fields from editing if this formual reults in "YES"</description>
    <formula>IF(
AND(
pse__Invoiced__c = TRUE,
OR( 
ISPICKVAL(Stage__c,'Invoiced'),  
ISPICKVAL(Stage__c,'Oracle/PSA Reconciled'))), 'YES', 'No')</formula>
    <label>Edit Lock</label>
    <type>Text</type>
</CustomField>