unpackaged/main/default/objects/pse__Billing_Event__c/fields/Expense_Sold_Rate_Summary__c.field-meta.xml
<CustomField>
    <fullName>Expense_Sold_Rate_Summary__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>Expense Sold Rate Summary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>