unpackaged/main/default/objects/pse__Billing_Event__c/fields/Expense_Summary__c.field-meta.xml
<CustomField>
    <fullName>Expense_Summary__c</fullName>
    <label>Expense Summary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>