unpackaged/main/default/objects/pse__Billing_Event__c/fields/Hold_Released__c.field-meta.xml
<CustomField>
    <fullName>Hold_Released__c</fullName>
    <inlineHelpText>Released = Approved, otherwise enter the reject reason.</inlineHelpText>
    <label>Hold Released</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Resubmitted</fullName>
            </value>
            <value>
                <fullName>Reject - Pricing doesn't match</fullName>
            </value>
            <value>
                <fullName>Reject - Hours don't match</fullName>
            </value>
            <value>
                <fullName>Reject - Other (Please enter reason)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>