unpackaged/main/default/objects/pse__Billing_Event__c/fields/Invoice_Method__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Method__c</fullName>
    <label>Invoice Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bill in Advance (prepaid)</fullName>
                <label>Prepaid</label>
            </value>
            <value>
                <fullName>Bill on Delivery (postpaid)</fullName>
                <label>Postpaid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>