unpackaged/main/default/objects/pse__Billing_Event__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>