unpackaged/main/default/objects/pse__Billing_Event__c/fields/Owner_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Owner_Assigned_To__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>OwnerId &lt;&gt;  Assigned_To__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner&lt;&gt;Assigned To</label>
    <type>Checkbox</type>
</CustomField>