unpackaged/main/default/objects/pse__Billing_Event__c/fields/Processed_by_OR__c.field-meta.xml
<CustomField>
    <fullName>Processed_by_OR__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <inlineHelpText>Processed = Approved, otherwise choose the reject reason</inlineHelpText>
    <label>Processed by OR</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Resubmitted</fullName>
            </value>
            <value>
                <fullName>Reject - SKU</fullName>
            </value>
            <value>
                <fullName>Reject - QTY</fullName>
            </value>
            <value>
                <fullName>Reject - Unit Price</fullName>
            </value>
            <value>
                <fullName>Reject - Order Closed</fullName>
            </value>
            <value>
                <fullName>Reject - Other (Please enter reason)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>