unpackaged/main/default/objects/pse__Billing_Event__c/fields/Products_Services_Amount__c.field-meta.xml
<CustomField>
    <fullName>Products_Services_Amount__c</fullName>
    <description>Products &amp; Services Amount field value from the Project assoicated with this Billing Event</description>
    <formula>pse__Project__r.Product_Services_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Booked Opportunity/PO Amount</inlineHelpText>
    <label>Products &amp; Services Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>