unpackaged/main/default/objects/pse__Billing_Event__c/fields/Project_Group__c.field-meta.xml
<CustomField>
    <fullName>Project_Group__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>pse__Project__r.pse__Group__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Group</label>
    <type>Text</type>
</CustomField>