unpackaged/main/default/objects/pse__Billing_Event__c/fields/PS_Consulting_Region__c.field-meta.xml
<CustomField>
    <fullName>PS_Consulting_Region__c</fullName>
    <formula>pse__Project__r.pse__Region__r.Name</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>