unpackaged/main/default/objects/pse__Billing_Event__c/fields/PSA_Version__c.field-meta.xml
<CustomField>
    <fullName>PSA_Version__c</fullName>
    <formula>pse__Project__r.PSA_Version__c</formula>
    <label>PSA Version</label>
    <type>Text</type>
</CustomField>