unpackaged/main/default/objects/pse__Billing_Event__c/fields/psaws__Billing_Event_Stage__c.field-meta.xml
<CustomField>
    <fullName>psaws__Billing_Event_Stage__c</fullName>
    <description>The stage of the billing event as it moves through the process sequentially from generation (Generated), released to finance (Released), to marked as invoiced (Invoiced). These stages are used in reports.</description>
    <formula>IF(pse__Is_Released__c == FALSE, 'Generated',  IF(pse__Is_Released__c == TRUE &amp;&amp;  pse__Invoiced__c == FALSE  , 'Released',  IF(pse__Is_Released__c == TRUE &amp;&amp;  pse__Invoiced__c == TRUE, 'Invoiced', '') ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The stage of the billing event as it moves through the process sequentially from generation (Generated), released to finance (Released), to marked as invoiced (Invoiced). These stages are used in reports.</inlineHelpText>
    <label>Billing Event Stage</label>
    <type>Text</type>
</CustomField>