unpackaged/main/default/objects/pse__Billing_Event__c/fields/Recognized__c.field-meta.xml
<CustomField>
    <fullName>Recognized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to designate AR has approved the BE and PS has completed the process.</description>
    <label>Recognized</label>
    <type>Checkbox</type>
</CustomField>