unpackaged/main/default/objects/pse__Billing_Event__c/fields/Return_to_PS__c.field-meta.xml
<CustomField>
    <fullName>Return_to_PS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return to PS</label>
    <type>Checkbox</type>
</CustomField>