unpackaged/main/default/objects/pse__Billing_Event__c/fields/Revenue_Recognition_Date__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognition_Date__c</fullName>
    <label>Revenue Recognition Date</label>
    <type>Date</type>
</CustomField>