unpackaged/main/default/objects/pse__Billing_Event__c/fields/Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Number__c</fullName>
    <formula>pse__Project__r.Sales_Order_Number__c</formula>
    <label>Sales Order Number</label>
    <type>Text</type>
</CustomField>