unpackaged/main/default/objects/pse__Billing_Event__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>STRY0023480 - Alison Israel</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Process by PS</fullName>
                <default>true</default>
                <label>In Process by PS</label>
            </value>
            <value>
                <fullName>Submitted to OR</fullName>
            </value>
            <value>
                <fullName>In Process by OR</fullName>
            </value>
            <value>
                <fullName>Submitted to OV</fullName>
            </value>
            <value>
                <fullName>In Process by OV</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Rejected by OR: SKU</fullName>
            </value>
            <value>
                <fullName>Rejected by OR: Qty</fullName>
            </value>
            <value>
                <fullName>Rejected by OR: Unit Price</fullName>
            </value>
            <value>
                <fullName>Rejected by OR: Order Closed</fullName>
            </value>
            <value>
                <fullName>Rejected by OR: Other (please describe)</fullName>
            </value>
            <value>
                <fullName>Submitted to AR</fullName>
            </value>
            <value>
                <fullName>Revenue Recognized</fullName>
            </value>
            <value>
                <fullName>Rejected by AR: Incorrect Rate/Amount</fullName>
            </value>
            <value>
                <fullName>Rejected by AR: Future-Dated</fullName>
            </value>
            <value>
                <fullName>Rejected by AR: No Balance Remaining</fullName>
            </value>
            <value>
                <fullName>Rejected by AR: Order Not Invoiced</fullName>
            </value>
            <value>
                <fullName>Rejected by AR: Other (please describe)</fullName>
            </value>
            <value>
                <fullName>Oracle PSA Reconciled</fullName>
                <label>Oracle/PSA Reconciled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>