unpackaged/main/default/objects/pse__Billing_Event__c/fields/Theater__c.field-meta.xml
<CustomField>
    <fullName>Theater__c</fullName>
    <formula>pse__Project__r.Theater__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-populated based on Region. If Top level Region is selected (Americas, EMEA, APCJ), Theater will be blank.</inlineHelpText>
    <label>Theater</label>
    <type>Text</type>
</CustomField>