unpackaged/main/default/objects/pse__Billing_Event__c/fields/Time_Expense_Approver__c.field-meta.xml
<CustomField>
    <fullName>Time_Expense_Approver__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>pse__Project__r.pse__Project_Manager__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time &amp; Expense Approver</label>
    <type>Text</type>
</CustomField>