unpackaged/main/default/objects/pse__Billing_Event__c/fields/Validated_by_PS__c.field-meta.xml
<CustomField>
    <fullName>Validated_by_PS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <label>Validated by PS</label>
    <type>Checkbox</type>
</CustomField>