unpackaged/main/default/objects/pse__Billing_Event__c/recordTypes/AR_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>AR_Record_Type</fullName>
    <active>true</active>
    <description>Record Type used by AR to process Deferred Revenue Billing Events</description>
    <label>AR - BE Record Type</label>
</RecordType>