unpackaged/main/default/objects/pse__Billing_Event__c/recordTypes/Billing_Event.recordType-meta.xml
<RecordType>
    <fullName>Billing_Event</fullName>
    <active>true</active>
    <description>ENH35948</description>
    <label>PS Ops - BE Record Type</label>
</RecordType>