unpackaged/main/default/objects/pse__Billing_Event__c/recordTypes/Billing_Event_Locked.recordType-meta.xml
<RecordType>
    <fullName>Billing_Event_Locked</fullName>
    <active>true</active>
    <label>Billing Event - Locked</label>
</RecordType>