unpackaged/main/default/objects/pse__Billing_Event__c/recordTypes/OR_OV_BE_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>OR_OV_BE_Record_Type</fullName>
    <active>true</active>
    <description>Record Type used by OR/OV to process Billing Events for Invoicing</description>
    <label>In Process by PS</label>
</RecordType>