unpackaged/main/default/objects/pse__Billing_Event__c/validationRules/InvoiceMethodPostPaid.validationRule-meta.xml
<ValidationRule>
    <fullName>InvoiceMethodPostPaid</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Permission.PSA_Bypass_PROD_Admin =FALSE,/*Allow *F5 - PRODUCTION ADMIN profile*/
ISPICKVAL(Invoice_Method__c, 'Bill on Delivery (postpaid)'), 
ISPICKVAL(Stage__c,'Submitted to AR')
)</errorConditionFormula>
    <errorMessage>Please Select Stage as Submitted to AR when Invoice Method is Prepaid</errorMessage>
</ValidationRule>