unpackaged/main/default/objects/pse__Billing_Event__c/validationRules/InvoiceMethodPrepaid.validationRule-meta.xml
<ValidationRule>
    <fullName>InvoiceMethodPrepaid</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Invoice_Method__c, 'Bill in Advance (prepaid)'), 
ISPICKVAL(Stage__c,'Submitted to OR')
)</errorConditionFormula>
    <errorDisplayField>pse__Is_Approved__c</errorDisplayField>
    <errorMessage>Please Select Stage as Submitted to AR when Invoice Method is PostPaid</errorMessage>
</ValidationRule>