unpackaged/main/default/objects/pse__Billing_Event__c/validationRules/OraclePSA_Reconciled_Stage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>OraclePSA_Reconciled_Stage_Validation</fullName>
    <active>true</active>
    <description>ENH19645: Enforces fields when Billing Event Oracle/PSA Reconciled stage is selected.</description>
    <errorConditionFormula>AND( 
    ISPICKVAL(Stage__c, 'Oracle PSA Reconciled'),
    ISPICKVAL( Invoice_Method__c ,'Postpaid'),
    NOT(ISPICKVAL(PRIORVALUE(Stage__c),'Revenue Recognized')),
  OR(
    ISBLANK(pse__Invoice_Number__c),
    ISBLANK(pse__Invoice_Date__c),
    Validated_by_PS__c=FALSE
)
)</errorConditionFormula>
    <errorMessage>Invoice Number, Invoice Date, and Validated by PS fields are required for Oracle/PSA Reconciled stage.</errorMessage>
</ValidationRule>