unpackaged/main/default/objects/pse__Billing_Event__c/validationRules/Record_Type_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_Type_Locked</fullName>
    <active>false</active>
    <description>Record type change can only be made by Admin or Finance.</description>
    <errorConditionFormula>AND(
ISCHANGED( Record_Type__c ),
NOT(ISNEW()),
NOT( CONTAINS($Profile.Name,"*F5 - PRODUCTION ADMIN")),
NOT(CONTAINS( $Profile.Name,"*F5 - NA Order Admin *HQ"))
)</errorConditionFormula>
    <errorMessage>You do not have permission to change the Record Type</errorMessage>
</ValidationRule>